# wasmbin

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: dump.rs
fuzz/: Cargo.toml
src/: indices.rs  io.rs  lib.rs  module.rs  sections.rs  types.rs  visit.rs  wasm.rs
src/builtins/: blob.rs  boolean.rs  floats.rs  lazy.rs
src/instructions/: exceptions.rs  misc.rs  mod.rs  simd.rs  threads.rs
tests/: regression.rs  spec.rs
tests/regression/: heap_type_index_s33.wasm
