[workspace.package]
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/RReverser/wasmbin"

[package]
name = "wasmbin"
description = "A self-generating WebAssembly parser and serializer"
categories = ["wasm", "parser-implementations"]
keywords = ["webassembly", "wasm", "parser", "serializer"]
version = "0.9.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

exclude = [
    "tests/testsuite",
    "benches/fixture.wasm",
]

[lib]
crate-type = ["cdylib", "lib"]

[workspace.dependencies]
thiserror = "2.0.12"

[dependencies]
leb128 = "0.2.5"
thiserror.workspace = true
wasmbin-derive = { version = "0.2.4", path = "derive" }
custom_debug = "0.6.2"
once_cell = "1.21.3"
wasm-bindgen = { version = "0.2.121", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3.98", optional = true }

[features]
default = []
proposals = [
    "extended-name-section",
    "threads",
    "custom-page-sizes",
]
extended-name-section = []
threads = []
custom-page-sizes = []
nightly = []
wasm-bindgen = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen", "dep:js-sys"]

[dev-dependencies]
criterion = "0.8.2"
libtest-mimic = "0.8.1"
wast = "244.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
tempfile = "3.19.1"
indexmap = { version = "2.9.0", features = ["rayon"] }
rayon = "1.10.0"
fs-err = "3.1.0"
clap = "4.5.37"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true

[[test]]
name = "spec"
harness = false

[workspace]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
unnameable_types = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
as_conversions = "warn"
elidable_lifetime_names = "warn"
uninlined_format_args = "warn"
