[package]
name = "wasmbin-derive"
description = "Derive crate for the wasmbin library"
version = "0.2.4"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13.2"
quote = "1.0.40"
proc-macro2 = "1.0.95"
syn = "2.0.101"
thiserror.workspace = true

[lints]
workspace = true
